--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 streamlit==1.35.0
+streamlit-option-menu==0.3.2
 pandas==2.1.0
-openpyxl==3.1.2
 scikit-learn==1.3.0
 plotly==5.22.0
-matplotlib==3.8.0
 xlsxwriter==3.1.2
-streamlit-option-menu
+numpy==1.26.4
